--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,23 @@
+#Database
+#spring.datasource.url=jdbc:postgresql://localhost:65432/kamperdo
+spring.datasource.url=jdbc:postgresql://localhost:5432/diy
+spring.datasource.username=diy
+spring.datasource.password=diy
+spring.datasource.driver-class-name=org.postgresql.Driver
 
+
+#Hibernate properties
+spring.jpa.hibernate.hbm2ddl.auto=update
+spring.jpa.hibernate.ejb.naming_strategy=org.hibernate.cfg.EJB3NamingStrategy
+spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.hibernate.show_sql=false
+spring.jpa.show-sql=false
+spring.jpa.hibernate.format_sql=false
+spring.jpa.hibernate.use_sql_comments=false
+spring.jpa.hibernate.type=all
+spring.jpa.hibernate.disableConnectionTracking=true
+spring.jpa.hibernate.default_schema=dental
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
