Project general configuration (Swagger, junit, logging...)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+
+#Logging pattern for console and output.
+logging.pattern.console=%d{dd/MM/yyyy HH:mm:ss} %-5p | %X{requestId} | %X{username} | %X{requestUrl} | %c{0} | %m%n
+
+spring.resources.add-mappings=true
