--- a/pom.xml
+++ b/pom.xml
@@ -153,6 +153,12 @@
 			<version>1.2.17</version>
 		</dependency>
 
+		<dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>2.6</version>
+		</dependency>
+
 
 		<!-- JUnit Jupiter dependencies -->
 		<dependency>
